--- a/Practice_Rakamin_Virtual_Internship.ipynb
+++ b/Practice_Rakamin_Virtual_Internship.ipynb
@@ -6,7 +6,7 @@
       "name": "Practice Rakamin Virtual Internship.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOxUmfWs+0jalFhyJKxgDWs",
+      "authorship_tag": "ABX9TyOis3RUexm/weUiLhB3Uauw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -672,7 +672,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# MINGGU 2 - DATA PREPROCESSING"
+        "# MINGGU 2 - DATA UNDERSTANDING & DATA PREPARATION"
       ],
       "metadata": {
         "id": "XG5hT9NW16bS"
